--- a/store/blocks/global/components/home/home-section-seven.jsonc
+++ b/store/blocks/global/components/home/home-section-seven.jsonc
@@ -1,4 +1,21 @@
 { 
+    "flex-layout.row#section__seven-monthsproducts-content": {
+        "children": [
+            "flex-layout.col#section__seven-monthsproducts"
+        ],
+        "props": {
+            "blockClass": "section__seven-monthsproducts-content"
+        }
+    },
+    "flex-layout.col#section__seven-monthsproducts": {
+        "children": [
+            "rich-text#title__section-seven",
+            "flex-layout.row#section__seven-monthsproducts"
+        ],
+        "props": {
+            "blockClass": "section__seven-monthsproducts-container"
+        }
+    },
     "flex-layout.row#section__seven-monthsproducts":{
     "children":[
         "flex-layout.col#seven-monthsproducts-one",
@@ -6,8 +23,18 @@
         "flex-layout.col#seven-monthsproducts-three",
         "flex-layout.col#seven-monthsproducts-four"
     ],
-    "props":{}
+    "props":{
+        "blockClass": "content__group-monthsproducts"
+    }
 },
+
+"rich-text#title__section-seven": {
+    "props": {
+      "text": "Productos del mes",
+      "textAlignment": "CENTER",
+      "blockClass":"title__section-seven"
+    }
+  },
 
 "flex-layout.col#seven-monthsproducts-one":{
     "children":[
