--- a/store/blocks/global/components/home/home-section-three.jsonc
+++ b/store/blocks/global/components/home/home-section-three.jsonc
@@ -1,25 +1,44 @@
 {
-
     /*Declare the principal row */
     "flex-layout.row#section__three-yourmarket": {
         "children": [
+            "flex-layout.col#section__three-yourmarket"
+        ],"props":{
+            "blockClass":"section__three-yourmarket-content"}
+    },
+    "flex-layout.col#section__three-yourmarket": {
+        "children": [
+            "rich-text#title__section-three",
+            "flex-layout.row#section__three-yourmarket-container"
+        ],"props":{
+            "blockClass":"section__three-yourmarket-container"}
+    },
+    "flex-layout.row#section__three-yourmarket-container": {
+        "children": [
             "flex-layout.row#market__group-one",
             "flex-layout.row#market__group-two"
-        ]
+        ],"props":{
+            "blockClass":"section__three-yourmarket-container-groups"}
     },
-
+    "rich-text#title__section-three": {
+        "props": {
+            "text": "Todo para tu mercado",
+            "textAlignment": "CENTER",
+            "blockClass":"title__section-three"
+        }
+    },
     /*Declare first one group*/
-
     "flex-layout.row#market__group-one": {
         "children": [
             "image#market__image-one"
-        ]
+        ],"props":{
+            "blockClass":"market__group-one"}
     },
-
     "image#market__image-one": {
         "props": {
             "src": "assets/img/todomercado__img1.jpg",
-            "maxWidth": "100%"
+            "maxWidth": "100%",
+            "blockClass":"market__image-one"
         }
     },
     /*Declare next group */
@@ -27,32 +46,34 @@
         "children": [
             "flex-layout.col#market__image-one",
             "flex-layout.col#market__image-two"
-        ]
+        ],"props":{
+            "blockClass":"market__group-two"}
     },
-
     /*First sub-group */
     "flex-layout.col#market__image-one": {
         "children": [
             "image#market__image-two"
-        ]
+        ],"props":{
+        "blockClass":"market__image-two"}
     },
     "flex-layout.col#market__image-two": {
         "children": [
             "image#market__image-three"
-        ]
+        ],"props":{
+        "blockClass":"market__image-two"}
     },
     "image#market__image-two": {
         "props": {
             "src": "assets/img/todomercado__img2.jpg",
-            "maxWidth": "100%"
+            "maxWidth": "100%",
+            "blockClass":"market__image-one"
         }
     },
-
     "image#market__image-three": {
         "props": {
             "src": "assets/img/todomercado__img3.jpg",
-            "maxWidth": "100%"
+            "maxWidth": "100%",
+            "blockClass":"market__image-one"
         }
     }
-
 }
