--- a/store/blocks/global/components/home/home-section-five.jsonc
+++ b/store/blocks/global/components/home/home-section-five.jsonc
@@ -66,7 +66,8 @@
             "imageUrl": "assets/img/vino__img1.jpg",
             "subhead": "Santa Julia marca exclusiva <br> V.TTO reserva Malbec  Santa <br> Julia Marca exclusiva <br>$55.900<br>$27.950",
             "callToActionText": "Agregar",
-            "textAlignment": "left"
+            "textAlignment": "left",
+            "blockClass":"info__card-wine"
         }
     }
 }
